--- a/seplos3mqtt/seplos3mqtt.ini
+++ b/seplos3mqtt/seplos3mqtt.ini
@@ -2,6 +2,7 @@
 serial = /dev/ttyUSB0 
 mqtt_server = localhost
 mqtt_port = 1883
+#mqtt_port = 8883 # For secure connections
 mqtt_user =
 mqtt_pass =
 mqtt_prefix = seplos
