Support TLS autentication using cert * CerboGX requres TLS autentication when `MQTT on LAN (SSL)` is enable * The install script extract the CerboGX self-sign certificate
Signed-off-by: Gonçalo Negrier Duarte <gonegrier.duarte@gmail.com>

--- a/seplos3mqtt/seplos3mqtt.ini
+++ b/seplos3mqtt/seplos3mqtt.ini
@@ -6,3 +6,5 @@ mqtt_port = 1883
 mqtt_user =
 mqtt_pass =
 mqtt_prefix = seplos
+mqtt_tls = False
+#mqtt_cert = /data/apps/seplos3mqtt/cerbo.crt # CerboGX cert
